[package]
name = "rota"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
cron = "0.12.0"
false = "0.0.0"
justerror = "1.1.0"
log = "0.4.20"
paste = "1.0.14"
thiserror = "1.0.50"
tokio = { version = "1.33.0", default-features = false, features = [ "time", "macros", "rt" ]}
tokio-util = "0.7.9"
uuid = { version = "1.5.0", default-features = false, features = ["v4", "fast-rng", "atomic"] }
